# bsp-viewer-cmake

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
code/: quake_gui.cpp  quake_main.cpp  quake_map.cpp
data/shaders/: gui.glsl  sky.glsl  surface.glsl
